--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
+    "@types/react-redux": "^7.1.33",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
