--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
+    "sharp": "^0.33.4",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
